force-app/main/default/objects/ExpoHighLight__c/ExpoHighLight__c.object-meta.xml
<CustomObject>
    <label>ExpoHighLight</label>
    <nameField>
        <label>ExpoHighLight Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ExpoHighLights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>