force-app/main/default/objects/ExpoHighLight__c/fields/File__c.field-meta.xml
<CustomField>
    <fullName>File__c</fullName>
    <label>File</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>