force-app/main/default/objects/ExpoHighLight__c/fields/Internal_Registration__c.field-meta.xml
<CustomField>
    <fullName>Internal_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Registration</label>
    <referenceTo>Internal_Registration__c</referenceTo>
    <relationshipLabel>ExpoHighLights</relationshipLabel>
    <relationshipName>ExpoHighLights</relationshipName>
    <type>Lookup</type>
</CustomField>