force-app/main/default/objects/ExpoHighLight__c/fields/LogicDeleted__c.field-meta.xml
<CustomField>
    <fullName>LogicDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LogicDeleted</label>
    <type>Checkbox</type>
</CustomField>