force-app/main/default/objects/ExpoHighLight__c/fields/Media__c.field-meta.xml
<CustomField>
    <fullName>Media__c</fullName>
    <label>Media</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>