force-app/main/default/objects/ExpoHighLight__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Day__c</columns>
    <columns>File__c</columns>
    <columns>Media__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>